feat(argo-events): Add revisionhistorylimit webhook controller (#3196)
* add: webhook & controller revisionHistoryLimit to values.yaml

Signed-off-by: Martin Bouillaud <mbouillaud@lefigaro.fr>
Signed-off-by: Martin Bouillaud <contact@bouillaudmartin.fr>

* add default value to revisionHistoryLimit

Signed-off-by: Martin Bouillaud <mbouillaud@lefigaro.fr>
Signed-off-by: Martin Bouillaud <contact@bouillaudmartin.fr>

* trim default values in deployment

Signed-off-by: Martin Bouillaud <contact@bouillaudmartin.fr>

* fix: webhook typo

Signed-off-by: Martin Bouillaud <contact@bouillaudmartin.fr>

---------

Signed-off-by: Martin Bouillaud <mbouillaud@lefigaro.fr>
Signed-off-by: Martin Bouillaud <contact@bouillaudmartin.fr>
Co-authored-by: Martin Bouillaud <mbouillaud@lefigaro.fr>
Co-authored-by: Aikawa <yu.croco@gmail.com>

--- a/charts/argo-events/templates/argo-events-webhook/deployment.yaml
+++ b/charts/argo-events/templates/argo-events-webhook/deployment.yaml
@@ -11,7 +11,7 @@ spec:
   selector:
     matchLabels:
       {{- include "argo-events.selectorLabels" (dict "context" . "name" .Values.webhook.name) | nindent 6 }}
-  revisionHistoryLimit: 5
+  revisionHistoryLimit: {{ .Values.webhook.revisionHistoryLimit }}
   replicas: {{ .Values.webhook.replicas }}
   template:
     metadata:
