fix(argo-cd): Deprecate logLevel and logFormat values for dex and notifications controller
These are deprecated in favor of corresponding settings in `config.params`, to match with
the official docs: https://argo-cd.readthedocs.io/en/stable/operator-manual/argocd-cmd-params-cm-yaml/

The same changes were previously done for all other components much earlier in
https://github.com/argoproj/argo-helm/pull/1267
and then these params were removed in https://github.com/argoproj/argo-helm/pull/2407

Signed-off-by: Mikhail Zholobov <legal90@gmail.com>

--- a/charts/argo-cd/templates/argocd-notifications/deployment.yaml
+++ b/charts/argo-cd/templates/argocd-notifications/deployment.yaml
@@ -66,11 +66,15 @@ spec:
           args:
             - /usr/local/bin/argocd-notifications
             - --metrics-port={{ .Values.notifications.containerPorts.metrics }}
-            - --loglevel={{ default .Values.global.logging.level .Values.notifications.logLevel }}
-            - --logformat={{ default .Values.global.logging.format .Values.notifications.logFormat }}
             - --namespace={{ include "argo-cd.namespace" . }}
             - --argocd-repo-server={{ template "argo-cd.repoServer.fullname" . }}:{{ .Values.repoServer.service.port }}
             - --secret-name={{ .Values.notifications.secret.name }}
+            {{- with .Values.notifications.logLevel }}
+            - --loglevel={{ . | quote }}
+            {{- end }}
+            {{- with .Values.notifications.logFormat }}
+            - --logformat={{ . | quote }}
+            {{- end }}
             {{- range .Values.notifications.extraArgs }}
             - {{ . | squote }}
             {{- end }}
