chore(deps): Support helm dependency update
Signed-off-by: yu-croco <yu.croco@gmail.com>

--- a/renovate.json
+++ b/renovate.json
@@ -9,6 +9,7 @@
     ":gitSignOff"
   ],
   "labels": ["renovate"],
+  "postUpdateOptions": ["helmUpdateSubChartArchives"],
   "includePaths": [
     "**/charts/argo-workflows/Chart.yaml",
     "**/charts/argo-cd/Chart.yaml",
