fix(argo-cd): set loglevel and logformat cli args without quotes
Signed-off-by: Samy Djemaï <53857555+SamyDjemai@users.noreply.github.com>

--- a/charts/argo-cd/templates/argocd-notifications/deployment.yaml
+++ b/charts/argo-cd/templates/argocd-notifications/deployment.yaml
@@ -70,10 +70,10 @@ spec:
             - --argocd-repo-server={{ template "argo-cd.repoServer.fullname" . }}:{{ .Values.repoServer.service.port }}
             - --secret-name={{ .Values.notifications.secret.name }}
             {{- with .Values.notifications.logLevel }}
-            - --loglevel={{ . | quote }}
+            - --loglevel={{ . }}
             {{- end }}
             {{- with .Values.notifications.logFormat }}
-            - --logformat={{ . | quote }}
+            - --logformat={{ . }}
             {{- end }}
             {{- range .Values.notifications.extraArgs }}
             - {{ . | squote }}
