feat(argo-rollouts): restart when configmap changes (#3119)
* feat: argo-rollouts restart when configmap changes

Signed-off-by: Derek Brown <6845676+DerekTBrown@users.noreply.github.com>

* address comments

Signed-off-by: Derek Brown <6845676+DerekTBrown@users.noreply.github.com>

* fix: Add newline to fix linter (new-line-at-end-of-file)

Signed-off-by: Marco Maurer (-Kilchhofer) <mkilchhofer@users.noreply.github.com>

---------

Signed-off-by: Derek Brown <6845676+DerekTBrown@users.noreply.github.com>
Signed-off-by: Marco Maurer (-Kilchhofer) <mkilchhofer@users.noreply.github.com>
Co-authored-by: Marco Maurer (-Kilchhofer) <mkilchhofer@users.noreply.github.com>

--- a/charts/argo-rollouts/templates/controller/deployment.yaml
+++ b/charts/argo-rollouts/templates/controller/deployment.yaml
@@ -31,6 +31,7 @@ spec:
         {{- range $key, $value := . }}
         {{ $key }}: {{ $value | quote }}
         {{- end }}
+        checksum/cm: {{ include (print $.Template.BasePath "/configmap.yaml") . | sha256sum }}
       {{- end }}
       labels:
         {{- include "argo-rollouts.selectorLabels" . | nindent 8 }}
