fix(argo-cd): Also use oliver006/redis_exporter for non-HA redis
Signed-off-by: Marco Maurer <mkilchhofer@users.noreply.github.com>

--- a/renovate.json
+++ b/renovate.json
@@ -86,9 +86,9 @@
         "argoproj/argo-rollouts",
         "argoproj-labs/argocd-image-updater",
         "argoprojlabs/argocd-extension-installer",
-        "public.ecr.aws/bitnami/redis-exporter",
         "public.ecr.aws/docker/library/redis",
-        "ghcr.io/dexidp/dex"
+        "ghcr.io/dexidp/dex",
+        "ghcr.io/oliver006/redis_exporter"
       ],
       "commitMessagePrefix": "chore({{parentDir}}):",
       "postUpgradeTasks": {
