fix(argo-rollouts): Fix scope and path to CM for checksum calculation
Signed-off-by: Marco Maurer <mkilchhofer@users.noreply.github.com>

--- a/charts/argo-rollouts/Chart.yaml
+++ b/charts/argo-rollouts/Chart.yaml
@@ -2,7 +2,7 @@ apiVersion: v2
 appVersion: v1.8.2
 description: A Helm chart for Argo Rollouts
 name: argo-rollouts
-version: 2.39.4
+version: 2.39.5
 home: https://github.com/argoproj/argo-helm
 icon: https://argoproj.github.io/argo-rollouts/assets/logo.png
 keywords:
@@ -18,5 +18,5 @@ annotations:
     fingerprint: 2B8F22F57260EFA67BE1C5824B11F800CD9D2252
     url: https://argoproj.github.io/argo-helm/pgp_keys.asc
   artifacthub.io/changes: |
-    - kind: changed
+    - kind: fixed
       description: argo-rollouts will re-deploy if changes are made to the argo-rollouts configmap.
