Fix yamllint error 'trailing spaces'
Signed-off-by: Yves Schumann <y.schumann@proton.me>

--- a/charts/argo-workflows/templates/controller/workflow-controller-cluster-roles.yaml
+++ b/charts/argo-workflows/templates/controller/workflow-controller-cluster-roles.yaml
@@ -174,7 +174,7 @@ rules:
   verbs:
   - get
   resourceNames:
-  {{/* for HTTP templates */}}
+  {{- /* for HTTP templates */}}
   - argo-workflows-agent-ca-certificates
 {{- with .Values.controller.rbac.secretWhitelist }}
 - apiGroups:
