--- a/charts/argo-workflows/templates/controller/workflow-controller-deployment.yaml
+++ b/charts/argo-workflows/templates/controller/workflow-controller-deployment.yaml
@@ -106,7 +106,8 @@ spec:
             - name: {{ .Values.controller.metricsConfig.portName }}
               containerPort: {{ .Values.controller.metricsConfig.port }}
             - containerPort: 6060
-          livenessProbe: {{ .Values.controller.livenessProbe | toYaml | nindent 12 }}
+          livenessProbe:
+            {{- .Values.controller.livenessProbe | toYaml | nindent 12 }}
         {{- with .Values.controller.extraContainers }}
           {{- toYaml . | nindent 8 }}
         {{- end }}
