Fix yamllint error 'trailing spaces'
Signed-off-by: Yves Schumann <y.schumann@proton.me>

--- a/charts/argo-workflows/templates/controller/workflow-controller-sa.yaml
+++ b/charts/argo-workflows/templates/controller/workflow-controller-sa.yaml
@@ -9,7 +9,7 @@ metadata:
   {{- with .Values.controller.serviceAccount.labels  }}
     {{- toYaml . | nindent 4 }}
   {{- end }}
-  {{ with .Values.controller.serviceAccount.annotations }}
+  {{- with .Values.controller.serviceAccount.annotations }}
   annotations:
     {{- toYaml .| nindent 4 }}
   {{- end }}
