--- a/charts/argo-workflows/templates/extra-manifests.yaml
+++ b/charts/argo-workflows/templates/extra-manifests.yaml
@@ -1,8 +1,8 @@
-{{ range .Values.extraObjects }}
+{{- range .Values.extraObjects }}
 ---
-{{ if typeIs "string" . }}
+{{- if typeIs "string" . }}
     {{- tpl . $ }}
 {{- else }}
     {{- tpl (toYaml .) $ }}
 {{- end }}
-{{ end }}
+{{- end }}
