create secrets for service accounts if configured
Signed-off-by: Michael Kreis <michi.kreis@gmail.com>

--- a/charts/argo-workflows/values.yaml
+++ b/charts/argo-workflows/values.yaml
@@ -57,6 +57,8 @@ workflow:
   serviceAccount:
     # -- Specifies whether a service account should be created
     create: false
+    # -- Specifies whether a secret for each service account should be created
+    createSecret: false
     # -- Labels applied to created service account
     labels: {}
     # -- Annotations applied to created service account
