increase version number and add changelog
Signed-off-by: Michael Kreis <michi.kreis@gmail.com>

--- a/charts/argo-workflows/Chart.yaml
+++ b/charts/argo-workflows/Chart.yaml
@@ -3,7 +3,7 @@ appVersion: v3.6.5
 name: argo-workflows
 description: A Helm chart for Argo Workflows
 type: application
-version: 0.45.12
+version: 0.45.13
 icon: https://argo-workflows.readthedocs.io/en/stable/assets/logo.png
 home: https://github.com/argoproj/argo-helm
 sources:
@@ -17,4 +17,7 @@ annotations:
     url: https://argoproj.github.io/argo-helm/pgp_keys.asc
   artifacthub.io/changes: |
     - kind: fixed
-      description: Fix yamllint error 'trailing spaces'
+      description: Fix missing service account secrets
+      links:
+        - name: GitHub Issue
+          url: https://github.com/argoproj/argo-helm/issues/3236
