fix(chart): update appVersion and version in Chart.yaml
Bump appVersion and version to v2.14.9-2025-04-20-584fc7f3 in
Chart.yaml to reflect the latest release. Update the description
in artifacthub.io/changes to match the new versioning format.

--- a/charts/argo-cd/Chart.yaml
+++ b/charts/argo-cd/Chart.yaml
@@ -1,9 +1,9 @@
 apiVersion: v2
-appVersion: v2.14.9-2025-4-6-
+appVersion: v2.14.9-2025-04-20-584fc7f3
 kubeVersion: ">=1.25.0-0"
 description: A Helm chart for Argo CD, a declarative, GitOps continuous delivery tool for Kubernetes.
 name: argo-cd
-version: 7.8.23-cap-2.14.9-2025-4.6-
+version: 7.8.23-1-cap-v2.14.9-2025-04-20-584fc7f3
 home: https://github.com/argoproj/argo-helm
 icon: https://argo-cd.readthedocs.io/en/stable/assets/logo.png
 sources:
@@ -27,7 +27,7 @@ annotations:
     url: https://argoproj.github.io/argo-helm/pgp_keys.asc
   artifacthub.io/changes: |
     - kind: changed
-      description: bumped argo-cd to v2.14.9-2025.4.6-
+      description: bumped argo-cd to v2.14.9-2025-04-20-584fc7f3
     - kind: fixed
       description: Secret for embedded Redis deployments now always uses the same name and key
     - kind: fixed
