--- a/charts/argo-cd/ci/with-commit-server-values.yaml
+++ b/charts/argo-cd/ci/with-commit-server-values.yaml
@@ -1,3 +1,20 @@
 # Test Argo CD with optional component "commit-server"
 commitServer:
   enabled: true
+
+# needed for correct work of event reporter component
+extraObjects:
+  - apiVersion: v1
+    kind: Secret
+    metadata:
+      name: argocd-token
+    type: Opaque
+    data:
+      token: c29tZS10ZXN0LXBhc3N3b3Jk # some-test-password
+  - apiVersion: v1
+    kind: Secret
+    metadata:
+      name: codefresh-token
+    type: Opaque
+    data:
+      token: c29tZS10ZXN0LXBhc3N3b3Jk # some-test-password
