--- a/charts/argo-workflows/templates/server/gke/frontendconfig.yaml
+++ b/charts/argo-workflows/templates/server/gke/frontendconfig.yaml
@@ -1,4 +1,4 @@
-{{- if .Values.server.GKEfrontendConfig.enabled }}
+{{- if and .Values.server.enabled .Values.server.GKEfrontendConfig.enabled }}
 apiVersion: networking.gke.io/v1beta1
 kind: FrontendConfig
 metadata:
