--- a/charts/argo-workflows/templates/server/gke/managedcertificate.yaml
+++ b/charts/argo-workflows/templates/server/gke/managedcertificate.yaml
@@ -1,4 +1,4 @@
-{{- if .Values.server.GKEmanagedCertificate.enabled }}
+{{- if and .Values.server.enabled .Values.server.GKEmanagedCertificate.enabled }}
 apiVersion: networking.gke.io/v1
 kind: ManagedCertificate
 metadata:
