--- a/charts/argo-workflows/values.yaml
+++ b/charts/argo-workflows/values.yaml
@@ -1,3 +1,9 @@
+global:
+  # -- Default node selector for all components
+  nodeSelector: {}
+  # -- Default tolerations for all components
+  tolerations: []
+
 images:
   # -- Common tag for Argo Workflows images. Defaults to `.Chart.AppVersion`.
   tag: ""
