feat(argo-workflows): remove nodeSelector from default values (#143)

--- a/charts/argo-workflows/values.yaml
+++ b/charts/argo-workflows/values.yaml
@@ -361,8 +361,7 @@ controller:
     # maxUnavailable: 1
 
   # -- [Node selector]
-  nodeSelector:
-    kubernetes.io/os: linux
+  nodeSelector: {}
   # -- [Tolerations] for use with node taints
   tolerations: []
   # -- Assign custom [affinity] rules
@@ -577,8 +576,7 @@ server:
     # maxUnavailable: 1
 
   # -- [Node selector]
-  nodeSelector:
-    kubernetes.io/os: linux
+  nodeSelector: {}
 
   # -- [Tolerations] for use with node taints
   tolerations: []
