feat: Update Redis to 7.4.3  (#151)
* updatd redis to 7.4.3 chart to 4.33.4

Signed-off-by: reggie-k <regina.voloshin@codefresh.io>

* updated artifacthub.io/changes

Signed-off-by: reggie-k <regina.voloshin@codefresh.io>

* updatd redis to 7.4.3

Signed-off-by: reggie-k <regina.voloshin@codefresh.io>

* updatd redis to 7.4.3

Signed-off-by: reggie-k <regina.voloshin@codefresh.io>

* updatd redis to 7.4.3

Signed-off-by: reggie-k <regina.voloshin@codefresh.io>

---------

Signed-off-by: reggie-k <regina.voloshin@codefresh.io>

--- a/charts/argo-cd/Chart.yaml
+++ b/charts/argo-cd/Chart.yaml
@@ -3,7 +3,7 @@ appVersion: v2.14.9-2025-05-20-9356e64a
 kubeVersion: ">=1.25.0-0"
 description: A Helm chart for Argo CD, a declarative, GitOps continuous delivery tool for Kubernetes.
 name: argo-cd
-version: 7.8.23-4-cap-v2.14.9-2025-05-20-9356e64a
+version: 7.8.23-5-cap-v2.14.9-2025-05-20-9356e64a
 home: https://github.com/argoproj/argo-helm
 icon: https://argo-cd.readthedocs.io/en/stable/assets/logo.png
 sources:
@@ -27,4 +27,4 @@ annotations:
     url: https://argoproj.github.io/argo-helm/pgp_keys.asc
   artifacthub.io/changes: |
     - kind: changed
-      description: removed event-reporter resources
+      description: upgraded redis image to 7.4.3
