Revert pipe and run readme script
Signed-off-by: Jarvis Yang <jarvis.yang@recurohealth.com>

--- a/charts/argocd-image-updater/values.yaml
+++ b/charts/argocd-image-updater/values.yaml
@@ -20,13 +20,10 @@ fullnameOverride: ""
 # -- Global namespace (argocd-image-updater.namespace in _helpers.tpl) override
 namespaceOverride: ""
 
-# -- Create cluster roles for cluster-wide installation.
-# | Used when you manage applications in the same cluster where Argo CD Image Updater runs.
-# | If you want to use this, please set `.Values.rbac.enabled` true as well.
+# -- Create cluster roles for cluster-wide installation. Used when you manage applications in the same cluster where Argo CD Image Updater runs. If you want to use this, please set `.Values.rbac.enabled` true as well.
 createClusterRoles: true
 
-# -- Extra arguments for argocd-image-updater not defined in `config.argocd`.
-# | If a flag contains both key and value, they need to be split to a new entry
+# -- Extra arguments for argocd-image-updater not defined in `config.argocd`. If a flag contains both key and value, they need to be split to a new entry
 extraArgs: []
   # - --disable-kubernetes
   # - --dry-run
@@ -44,9 +41,7 @@ extraArgs: []
   # - --registries-conf-path
   # - /app/config/registries.conf
 
-# -- Extra environment variables for argocd-image-updater.
-# | These variables are also available to the authentication scripts mounted under /scripts,
-# | provided 'authScripts.enabled' is set to 'true'.
+# -- Extra environment variables for argocd-image-updater. These variables are also available to the authentication scripts mounted under /scripts, provided 'authScripts.enabled' is set to 'true'.
 extraEnv: []
   # - name: AWS_REGION
   #   value: "us-west-1"
@@ -62,8 +57,7 @@ extraEnvFrom: []
   # - secretRef:
   #     name: secret-name
 
-# -- Extra K8s manifests to deploy for argocd-image-updater
-# | Note: Supports use of custom Helm templates
+# -- Extra K8s manifests to deploy for argocd-image-updater. Note: Supports use of custom Helm templates
 extraObjects: []
   # - apiVersion: secrets-store.csi.x-k8s.io/v1
   #   kind: SecretProviderClass
@@ -204,15 +198,11 @@ config:
 # whether to mount authentication scripts, if enabled, the authentication scripts will be mounted on /scripts that can be used to authenticate with registries (Azure, ECR)
 # refer to https://argocd-image-updater.readthedocs.io/en/stable/configuration/registries/#specifying-credentials-for-accessing-container-registries for more info
 authScripts:
-  # -- Set to 'true' to enable mounting the defined authentication scripts.
-  # | If enabled, the scripts will be mounted at `/scripts` within the pod.
+  # -- Set to 'true' to enable mounting the defined authentication scripts. If enabled, the scripts will be mounted at `/scripts` within the pod.
   enabled: false
   # -- Name of the authentication scripts ConfigMap
   name: argocd-image-updater-authscripts
-  # -- Map of key-value pairs where the key consists of the name of the script and the value the contents.
-  # | Expect the script to output Docker credentials in the form: <username>:<password>
-  # | Authentication scripts can be used for various cloud providers like ECR or Azure Workload Identity.
-  # | For Azure Workload Identity, you can place your authentication script here to handle token acquisition.
+  # -- Map of key-value pairs where the key consists of the name of the script and the value the contents. Expect the script to output Docker credentials in the form: <username>:<password> Authentication scripts can be used for various cloud providers like ECR or Azure Workload Identity. For Azure Workload Identity, you can place your authentication script here to handle token acquisition.
   scripts: {}
     # auth1.sh: |
     #   #!/bin/sh
@@ -230,25 +220,21 @@ authScripts:
 serviceAccount:
   # -- Specifies whether a service account should be created
   create: true
-  # -- Annotations to add to the service account, useful for integrating with
-  # | platforms like Azure Workload Identity.
+  # -- Annotations to add to the service account, useful for integrating with platforms like Azure Workload Identity.
   annotations: {}
   # Example for Azure Workload Identity:
     # azure.workload.identity/client-id: "xxxxxxx-xxxx-xxxx-xxxx-xxxxxxxxxxxx"
-  # -- Labels to add to the service account, useful for integration with
-  # | platforms like Azure Workload Identity.
+  # -- Labels to add to the service account, useful for integration with platforms like Azure Workload Identity.
   labels: {}
   # Example for Azure Workload Identity:
   #  azure.workload.identity/use: "true"
-  # -- The name of the service account to use.
-  # If not set and create is true, a name is generated using the fullname template
+  # -- The name of the service account to use. If not set and create is true, a name is generated using the fullname template
   name: ""
 
 # -- Pod Annotations for the deployment
 podAnnotations: {}
 
-# -- Labels to apply to the pods, useful for integrating with
-# | platforms like Azure Workload Identity.
+# -- Labels to apply to the pods, useful for integrating with platforms like Azure Workload Identity.
 podLabels: {}
   # azure.workload.identity/use: "true"
 
