--- a/charts/argocd-image-updater/Chart.yaml
+++ b/charts/argocd-image-updater/Chart.yaml
@@ -19,4 +19,4 @@ annotations:
     url: https://argoproj.github.io/argo-helm/pgp_keys.asc
   artifacthub.io/changes: |
     - kind: changed
-      description: Adding vergbiage for auth scripts and Azure Container Registry if using workload identity.
+      description: Adding verbiage for auth scripts and Azure Container Registry if using workload identity.
