revert verbiage and running readme script
Signed-off-by: Jarvis Yang <jarvis.yang@recurohealth.com>

--- a/charts/argocd-image-updater/values.yaml
+++ b/charts/argocd-image-updater/values.yaml
@@ -243,7 +243,7 @@ serviceAccount:
 # -- Pod Annotations for the deployment
 podAnnotations: {}
 
-# -- Labels to apply to the pods
+# -- Pod Labels for the deployment
 podLabels: {}
   # azure.workload.identity/use: "true"
 
